@@ -62,6 +62,9 @@ class ext_update {
 			if ($this->needsToUpdateTypoScriptTemplates()) {
 				$result .= $this->updateTypoScriptTemplates();
 			}
+			if ($this->needsToUpdateEventPaymentMethodRelations()) {
+				$result .= $this->updateEventPaymentMethodsRelations();
+			}
 		} catch (tx_oelib_Exception_Database $exception) {
 			$result = '';
 		}
@@ -82,6 +85,7 @@ class ext_update {
 		}
 		if (!tx_oelib_db::existsTable(SEMINARS_TABLE_SEMINARS_ORGANIZERS_MM)
 			|| !tx_oelib_db::existsTable(SEMINARS_TABLE_SEMINARS)
+			|| !tx_oelib_db::existsTable('tx_seminars_seminars_payment_methods_mm')
 		) {
 			return false;
 		}
@@ -93,10 +97,12 @@ class ext_update {
 
 		try {
 			$result = (($this->needsToUpdateEventOrganizerRelations()
-				&& $this->hasEventsWithOrganizers())
+					&& $this->hasEventsWithOrganizers())
 				|| $this->needsToUpdateEventField('needsRegistration')
 				|| $this->needsToUpdateEventField('queueSize')
 				|| $this->needsToUpdateTypoScriptTemplates()
+				|| ($this->needsToUpdateEventPaymentMethodRelations()
+					&& $this->hasEventsWithPaymentMethods())
 			);
 		} catch (tx_oelib_Exception_Database $exception) {
 			$result = false;
@@ -117,9 +123,10 @@ class ext_update {
 
 		// Gets all events which have an organizer set.
 		$eventsWithOrganizers = tx_oelib_db::selectMultiple(
-			'uid, title, organizers',
+			'uid, organizers',
 			SEMINARS_TABLE_SEMINARS,
-			SEMINARS_TABLE_SEMINARS . '.organizers <> 0'
+			SEMINARS_TABLE_SEMINARS . '.organizers<>"" AND ' .
+				SEMINARS_TABLE_SEMINARS . '.organizers<>"0"'
 		);
 
 		foreach ($eventsWithOrganizers as $event) {
@@ -185,7 +192,8 @@ class ext_update {
 		$row = tx_oelib_db::selectSingle(
 			'COUNT(*) AS count',
 			SEMINARS_TABLE_SEMINARS,
-			SEMINARS_TABLE_SEMINARS . '.organizers<>0'
+			SEMINARS_TABLE_SEMINARS . '.organizers<>"" AND ' .
+				SEMINARS_TABLE_SEMINARS . '.organizers<>"0"'
 		);
 
 		return ($row['count'] > 0);
@@ -301,6 +309,94 @@ class ext_update {
 		$result .= '</ul>';
 
 		return $result;
+	}
+
+	/**
+	 * Updates the event-payment-method-relations to real M:M relations.
+	 *
+	 * @return string information about the status of the update process,
+	 *                will not be empty.
+	 */
+	private function updateEventPaymentMethodsRelations() {
+		$result = '<h2>Updating event-payment-method-relations:</h2>';
+		$result .= '<ul>';
+
+		// Gets all events which have a payment method set.
+		$eventsWithPaymentMethods = tx_oelib_db::selectMultiple(
+			'uid, payment_methods',
+			'tx_seminars_seminars',
+			'tx_seminars_seminars.payment_methods<>"" AND ' .
+				'tx_seminars_seminars.payment_methods<>"0"'
+		);
+
+		foreach ($eventsWithPaymentMethods as $event) {
+			$result .= '<li>Event #' . $event['uid'];
+
+			// Adds a relation entry for each payment method UID.
+			$result .= '<ul>';
+			$sorting = 0;
+			$paymentMethodUids = t3lib_div::trimExplode(
+				',', $event['payment_methods'], true
+			);
+			foreach ($paymentMethodUids as $paymentMethodUid) {
+				$result .= '<li>Payment method #' . $paymentMethodUid . '</li>';
+				tx_oelib_db::insert(
+					'tx_seminars_seminars_payment_methods_mm',
+					array(
+						'uid_local' => $event['uid'],
+						'uid_foreign' => intval($paymentMethodUid),
+						'sorting' => $sorting,
+					)
+				);
+				$sorting++;
+			}
+			$result .= '</ul>';
+
+			// Updates the event's organizers field with the number of organizer
+			// UIDs.
+			tx_oelib_db::update(
+				'tx_seminars_seminars',
+				'tx_seminars_seminars.uid = ' . $event['uid'],
+				array('payment_methods' => count($paymentMethodUids))
+			);
+
+			$result .= '</li>';
+		}
+
+		$result .= '</ul>';
+
+		return $result;
+	}
+
+	/**
+	 * Checks whether there are no real event-payment-method-m:n-relations yet.
+	 *
+	 * @return boolean true if there are no real event-payment-method-m:n-
+	 *                 relations, false otherwise
+	 */
+	private function needsToUpdateEventPaymentMethodRelations() {
+		$row = tx_oelib_db::selectSingle(
+			'COUNT(*) AS count', 'tx_seminars_seminars_payment_methods_mm', '1=1'
+		);
+
+		return ($row['count'] == 0);
+	}
+
+	/**
+	 * Checks whether there are any events with payment methods set.
+	 *
+	 * @return boolean true if there is at least one event with payment methods
+	 *                 set, false otherwise
+	 */
+	private function hasEventsWithPaymentMethods() {
+		$row = tx_oelib_db::selectSingle(
+			'COUNT(*) AS count',
+			'tx_seminars_seminars',
+			'tx_seminars_seminars.payment_methods<>"" AND ' .
+				' tx_seminars_seminars.payment_methods<>"0"'
+		);
+
+		return ($row['count'] > 0);
 	}
 }
 
