@@ -702,9 +702,11 @@ $TCA['tx_seminars_seminars'] = array(
 				'internal_type' => 'db',
 				'allowed' => 'tx_seminars_payment_methods',
 				'foreign_table' => 'tx_seminars_payment_methods',
+				'foreign_table_where' => 'ORDER BY title',
 				'size' => 5,
 				'minitems' => 0,
 				'maxitems' => 999,
+				'MM' => 'tx_seminars_seminars_payment_methods_mm',
 				'wizards' => tx_seminars_tableReplace($tempWizard, 'tx_seminars_payment_methods'),
 			),
 		),
