@@ -1,4 +1,5 @@
 0.8.0 (currently working on)
+- [#2900] Change: Change the event-payment method relations to real m:n relations
 - [#2947] Change: Move the HTML for the payment method list from the event model to the template
 - [#2929] Change: Move notifyAttendee() and notifyOrganizers() to the registrationmanager
 - [#2936] Feature: Add a flexform configuration for the Search Widget in the list view
